--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>MyName's Homepage</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/homepage.css">
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-
-	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
-</head>
-<body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>MyName's Homepage</h1>
-			<div class="minor-section">
-					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
-					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
-			</div>
-
-		</section>
-		<nav id="links">
-			<!-- Put links to labs here. -->
-		</nav>
-	</main>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/lab.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/site.css">
+  </head>
+  <body>
+    <div id="content">
+      <h1>Hello World!</h1>
+      <img src="img/bp.jpg">
+      <img src="img/sky.jpg">
+      <p>My name is Baoqi Yu. I'm a third-year AGPM major. I'm fond of playing all kinds of video games. I hope to become a fantastic game design in the future.</p>
+      <p1>Hello, my name is Haien Liang. I am a second year Art major. I like to sing and draw during my freetime. I used to play the clarinet for six years, but I stopped playing it since high school.</p1>
+      
+    </div>
+  </body>
 </html>
