--- a/lab2/index.html
+++ b/lab2/index.html
@@ -11,7 +11,7 @@
       <img src="img/bp.jpg">
       <img src="img/sky.jpg">
       <p>My name is Baoqi Yu. I'm a third-year AGPM major. I'm fond of playing all kinds of video games. I hope to become a fantastic game design in the future.</p>
-      <p1>Hello, my name is Haien Liang. I am a second year Art major. I like to sing and draw during my freetime. I used to play the clarinet for six years, but I stopped playing it since high school.</p1>
+      <p1>Hi, my name is Haien Liang. I am a second year Art major. I like to sing and draw during my freetime. I used to play the clarinet for six years, but I stopped playing it since high school.</p1>
       
     </div>
   </body>
