--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Lab 3 File Structure</title>
-	</head>
-<body>	
-		<h1>The subject of lab 3</h1>
-		<p>File Structure and File Transfer</p>
-	
 
-		<h2>Challenges and Difficulties</h2>
-		<p>It is a little bit difficult for me to adjust the position of my images in task 2</p>
-
-
-	<div class="content">
-		<h3>The result of my work</h1>
-		<p>Here is my work file structure</p>
-		<img src="img/screenshot.jpg" width="700">
-</body>
-</html>
+<div class="assignments major-section">
+	<h2>Labs</h2>
+	<ul>
+		<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+		<li><a href="lab3/">Lab 3: File Structure</a></li>
+		<li><a href="lab4/">Lab 4: File Transfer</a></li>
+		<li><a href="lab5/">Lab 5:</a></li>
+		<li><a href="lab6/">Lab 6:</a></li>
+	</ul>
+</div>
