--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Lab 3 File Structure</title>
-	</head>
-<body>	
-		<h1>The subject of lab 3</h1>
-		<p>File Structure and File Transfer</p>
-	
-
-		<h2>Challenges and Difficulties</h2>
-		<p>It is a little bit difficult for me to adjust the position of my images in task 2</p>
-
-
-	<div class="content">
-		<h3>The result of my work</h1>
-		<p>Here is my work file structure</p>
-		<img src="img/screenshot.jpg" width="700">
+<head>
+ <title>My Webpage</title>
+ <style>
+  body {
+   background-color: rgba(214, 69, 151, 0.628);
+  }
+  .content {
+   margin: 20px;
+   padding: 20px;
+   background-color: rgb(183, 85, 173);
+   border-radius: 10px;
+  }
+  .content h1 {
+   color: rgb(38, 216, 133);
+  }
+  .content h2 {
+   color: green;
+  }
+  .content img {
+   display: block;
+   margin: 0 auto;
+   max-width: 100%;
+   height: auto;
+  }
+ </style>
+</head>
+<body>
+ <div class="content">
+  <h1>Self-Introduction</h1>
+  <img src="img/ybq.jpg" width="200" height="360">
+  <p>Hi everyone! I'm Baoqi Yu and I'm a third-year AGPM major.</p>
+ </div>
+ 
+ <div class="content">
+  <h2>Interests</h2>
+  <img src="img/night.jpg" width="200" height="360">
+  <p>I'm fond of playing all kinds of video games. Also, I'm learning boxing and Korean. I really like eating fried chicken and all kinds of BBQ meat.</p>
+ </div>
 </body>
 </html>
+
+
+<div class="assignments major-section">
+	<h2>Labs</h2>
+	<ul>
+		<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+		<li><a href="lab3/">Lab 3: File Structure</a></li>
+		<li><a href="lab4/">Lab 4: File Transfer</a></li>
+		<li><a href="lab5/">Lab 5:</a></li>
+		<li><a href="lab6/">Lab 6:</a></li>
+	</ul>
+</div>
