--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
  <div class="content">
-  <h1>Self-Introduction</h1>
+  <h1>Self Introduction</h1>
   <img src="img/ybq.jpg" width="200" height="360">
   <p>Hi everyone! I'm Baoqi Yu and I'm a third-year AGPM major.</p>
  </div>
