--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,52 +1,110 @@
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+ <title>Lab 4: Pseudocoding and Problem-solving</title>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <link rel="stylesheet" type="text/css" href="../css/site.css">
+ <link rel="stylesheet" type="text/css" href="css/lab.css">
+ <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+ <script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
+ <main id="content">
+  <section>
+   <h1>Lab 4  Pseudocoding and Problem-solving</h1>
+   <div class="minor-section">
+     <h2>Challenge</h2>
+	 <p>For this lab, our challenge is to write a hihg-level tasks and learn pseudocode.</p>
+   </div>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
+   <div class="minor-section">
+     <h2>Problems</h2>
+     <p>During this lab, we encountered some problems:</p>
+	 <ol>
+		<li>Firstly, it is a little bit difficult for us to write high-level tasks.</li>
+        <li>Secondly, we spend some time editng html code for the format of the webpage and add JS lists into the html file.</li>
+      </ol>
+   </div>
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
 
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
+   <div class="minor-section">
+     <div id="output"></div>
+	 <h2>Results</h2>
+	 <div>
+	   <p>After doing some research on Google, we fix all issues and here are our work</p>
+	   <pre><code>
+		 /**
+		 *Author Name: Baoqi Yu & Haien Liang
+		 *Date: 04/23/2023
+		 *Description: A simple computer game namend Gomoku and Cooking of Stir-fried eggs and tomatoes
+		 *Email: byu27@ucsc.edu, hliang37@ucsc.edu
+		 /**
+ 
+		 //Cooking of Stir-fried eggs and tomatoes  
+		 //High-level taskts:
+		 //1. Find a kitchen or other places for Cooking
+		 //2. Collect and prepare all tools and ingredients
+			  //-tools requirnments: a knife, a spatula, 3 bowls or plates, two pairs of chopsticks, a non-stick pan
+			  //-ingredients: tomatoes, eggs, oil. ketchup, salt, green onions
+		 //3. Cut the tomatoes into small wedges or cubes
+		 //4. Cut the green onions into small slices
+		 //5. Beat the eggs in a bowl
+			  //-use the chopsticks to stir the eggs
+			  //-add a little bit water into the bowl
+		 //6. Heat a non-stick pan over high heat.
+		 //7. Add the oil into the non-stick pan
+			  //-wait for a few mintues
+		 //8. Add the eggs into the non-stick pan
+			  //-use the spatula to stir-fry until the egg is soft-boiled
+		 //9. Take out the eggs
+			  //-put the eggs into a plate or bowl
+		 //10. Add the oil again
+			  //-wait for a few seconds
+		 //11. Add the green onions
+			  //-use the spatula to stir-fry until the smell comes out
+		 //12. Add tomatos into the non-stick pan
+		 //13. Stir-fry green onions and tomatos together for a few mintues 
+		 //14. Add the eggs into the non-stick pan again
+		 //15. Add some ketchup and salt 
+		 //16. Keep using the spatula to stir-fry
+			   //-2 mintues in total 
+		 //17. Turn off the heat and transfer the food to a new serving plate.
+		 //18. Enjoy the Stir-fried eggs and tomatos 
+		 //19. Clean the kitchen after eating
+			   
+		 //A simple computer game: gomoku
+		 //1. Display a game board on the screen
+			   //-Draw the grid lines and intersections for the board.
+			   //-Label the rows and columns of the board.
+			   //-Create a space to display the player's names and scores.
+		 //2. Allow players to take turns to make a move
+			   //-Allow players to undo their last move if they change their mind.
+			   //-Implement a turn timer to prevent players from taking too long to make a move
+			   //-Ensure that only one stone can be placed on each intersection of the board.
+		 //3. Validate the move made by the player
+			   //-Ensure that the space selected by the player is valid
+			   //-Check that the move does not break the game rules 
+		 //4. Check for a winner after each move
+			   //-Check for horizontal, vertical, and diagonal lines of five stones after each move.
+			   //-Declare the winner if a line of five stones is found
+			   //-Detect if the board is full and the game is a draw.
+		 //5. Declare the winner or a draw at the end of the game
+		 //6. Allow players to choose to play another round or exit the game.
+			   //-Create a "play again" button to start a new game.
+			   //-Create an "exit game" button to close the game.
+	   </code></pre>
+	 <p>And here are two images of our work high-level tasks:</p>
+      <img src="img/gomoku.jpg" alt="Gomolu" style="width: 480px; height: 360px;">
+	  <img src="img/tomato.jpg" alt="Tomato" style="width: 480px; height: 360px;">
+   </div>
+  </section>
+  <nav id="links">
+  </nav>
+ </main>
 </body>
 </html>
