--- a/lab5/index.html
+++ b/lab5/index.html
@@ -20,7 +20,7 @@
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>There are no issues for us in this lab</p>
+					<p>There are no issues for us in lab5</p>
 			</div>
 
 			<div class="minor-section">
