--- a/lab7/index.html
+++ b/lab7/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 		<section>
+            <div class = "mini-sec">
 			<h1>Lab 7 - Functions</h1>
+            </div>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>For lab 7, we encountered challenge of revising overall file of ART 101</p>
