--- a/lab4/index.html
+++ b/lab4/index.html
@@ -94,9 +94,9 @@
 			   //-Create a "play again" button to start a new game.
 			   //-Create an "exit game" button to close the game.
 	   </code></pre>
-	 <p>And here are two images of our work high-level tasks:</p>
-      <img src="img/gomoku.jpg" alt="Gomolu" style="width: 480px; height: 360px;">
-	  <img src="img/tomato.jpg" alt="Tomato" style="width: 480px; height: 360px;">
+	 <p2>And here are two images of our work high-level tasks:</p>
+      <img src="img/gomoku.jpg" alt="Gomolu" style="width: 480px; height: 340px;">
+	  <img src="img/tomato.jpg" alt="Tomato" style="width: 480px; height: 340px;">
    </div>
   </section>
   <nav id="links">
