--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  
  <div class="content">
   <h2>Interests</h2>
-  <img src="img/SKY.jpg" width="200" height="360">
+  <img src="img/night.jpg" width="200" height="360">
   <p>I'm fond of playing all kinds of video games. Also, I'm learning boxing an Korean. I really like eating fried chicken and all kinds of BBQ meat</p >
  </div>
 </body>
@@ -50,5 +50,8 @@
   <li><a href="lab5/">Lab 5: Data Types and Variables</a ></li>
   <li><a href="lab6/">Lab 6: Arrays and Objects</a ></li>
   <li><a href="lab7/">Lab 7: Functions</a ></li>
+  <li><a href="lab8/">Lab 8: Anon Functions and Callbacks</a ></li>
+  <li><a href="lab9/">Lab 9: JavaScript for the Web</a ></li>
+  <li><a href="lab10/">Lab 10:  JavaScript Events and Forms</a ></li>
  </ul>
 </div>
