--- a/lab10/index.html
+++ b/lab10/index.html
@@ -6,7 +6,7 @@
 	<script src="js/lab.js" defer></script>
 </head>
 
-<h1>My Page</h1>
+<h1>Hello JavaScript</h1>
 <div id="content">
   <p>I will disappear if you click "Glitch!"</p>
   <button id="glitch-btn">Glitch</button>
