--- a/lab11/index.html
+++ b/lab11/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/lab.css">
 </head>
 <body>
-    <h1>Challenge, Problems, and Results</h1>
-
+    <h1>Lab 11: Libraries & jQuery</h1>
+    <section>
     <div id="challenges">
         <h2>Challenge</h2>
         <p>It is a challenge for us to use "Toggle"</p>
@@ -38,7 +38,7 @@
         <div id="target">We got two buttons!</div>
         <button id="results-button">Choose Me!</button>
     </div>
-
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
