--- a/lab11/index.html
+++ b/lab11/index.html
@@ -2,42 +2,43 @@
 <html>
 <head>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <title>Lab 11</title>
     <script src="js/lab.js" defer></script>
     <meta charset="UTF-8">
     <title>Challenge, Problems, and Results</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="css/lab.css">
 </head>
 <body>
     <h1>Lab 11: Libraries & jQuery</h1>
     <section>
-    <div id="challenges">
-        <h2>Challenge</h2>
-        <p>It is a challenge for us to use "Toggle"</p>
-        <button class="red">Red Button!</button>
-        <button class="green">Green Button!</button>
-        <div id="target">We got two buttons!</div>
-        <button id="challenges-button">Choose Me!</button>
-    </div>
+        <div id="challenges">
+            <h2>Challenge</h2>
+            <p>It is a challenge for us to use "Toggle"</p >
+            <button id= "blueButton" class="button bluee">Blue Button!</button>
+            <button id= "redButton" class="button red">Red Button!</button>
+            <button id= "greenButton" class="button green">Green Button!</button>
+            <button id= "pinkButton" class="button pink">Pink Button!</button>
+  
+            <div id="target">We got two buttons!</div>
+        </div>
 
-    <div id="problems">
-        <h2>Problems</h2>
-        <p>We don't know how to add a click function correctly</p> 
-        <button class="red">Red Button!</button>
-        <button class="green">Green Button!</button>
-        <div id="target">We got two buttons!</div>
-        <button id="problems-button">Choose Me!</button>
-    </div>
 
-    <div id="results">
-        <h2>Results</h2>
-        <p>So far so good! Here is our final work! We also do bonus!</p>
-        <button class="red">Red Button!</button>
-        <button class="green">Green Button!</button>
-        <div id="target">We got two buttons!</div>
-        <button id="results-button">Choose Me!</button>
-    </div>
+        <div id="problems">
+            <h2>Problems</h2>
+            <p>We don't know how to add a click function correctly</p > 
+            <button class="red">Red Button!</button>
+            <button class="green">Green Button!</button>
+            <div id="target">We got two buttons!</div>
+            <button id="problems-button">Choose Me!</button>
+        </div>
+
+        <div id="results">
+            <h2>Results</h2>
+            <p>So far so good! Here is our final work! We also do bonus!</p >
+            <button class="red">Red Button!</button>
+            <button class="green">Green Button!</button>
+            <div id="target">We got two buttons!</div>
+            <button id="results-button">Choose Me!</button>
+        </div>
     </section>
     <script src="js/script.js"></script>
 </body>
