--- a/lab12/index.html
+++ b/lab12/index.html
@@ -2,27 +2,50 @@
 <html>
 <head>
     <title>Lab 12</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/lab.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/lab.js" defer></script>
 </head>
 <body>
-    <h1>Challenge</h1>
-    <div>
+    <div id = "content">
+        <h1>Lab 12: Conditionals</h1>
+    </div>
+   <section>
+    <div id = "content">  
+        <h2>challenge</h2>
+        <p>Create the two tags: Back Home and JaveScript Source</p>
+    </div>
+
+    <div id = "content">
         <h2>Problems</h2>
-        <p>This is the first problem.</p>
-        <p>This is the second problem.</p>
-        <p>This is the third problem.</p>
+        <p>There no isses in this lab</p>
     </div>
-    <div>
+   
+    <div id = "content">
         <h2>Results</h2>
-        <p>These are the results of the challenge.</p>
+        <p>Here are results of lab and webpage</p>
     </div>
-    <form>
-        <label for="input">Please enter your name for sorting:</label>
-        <input type="text" id="input">
-        <button id="button">Submit</button>
-    </form>
-    <div id="output"></div>
+    </section>
+
+    <section class ="mini-section">
+    <div class = "input-output">
+        <h2>Welcome to Hogwarts</h2>
+        <p>Are you ready?</p>
+        Please enter your FULL NAME for sorting:
+        <input type = "text" id = "input">
+        <button id = "button">Submit</button>
+        <div id = "output">
+    </section>
+    </div>
+
+    <div class = "linkbox">
+        <a class = "homelink" href = "/cst252/">&lt; &lt; Back home</a>
+        <a class = "sourcelink" href = "js/lab12.js" target = "source">JaveScipt Source &gt; &gt; </a>
+    </div>
+
+     <!-- Task X-->
+    <div class="linkbox" id="houseLinks">
+    </div>
+   
 </body>
 </html>
