--- a/index.html
+++ b/index.html
@@ -53,5 +53,9 @@
   <li><a href="lab8/">Lab 8: Anon Functions and Callbacks</a ></li>
   <li><a href="lab9/">Lab 9: JavaScript for the Web</a ></li>
   <li><a href="lab10/">Lab 10:  JavaScript Events and Forms</a ></li>
+  <li><a href="lab11/">Lab 11: </a ></li>
+  <li><a href="lab12/">Lab 12:  </a ></li>
+  <li><a href="lab13/">Lab 13:  </a ></li>
+    
  </ul>
 </div>
