--- a/lab16/index.html
+++ b/lab16/index.html
@@ -2,32 +2,32 @@
 <html>
 <head>
     <title>Lab 16: JSON and APIs (XKCD comic!)</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/lab.js" defer></script>
     <link rel="stylesheet" href="css/lab.css">
 </head>
 <body>
     <section>
         <div id="challenge-section">
-            <h1>Lab 16: JSON and APIs</h1>
             <h1>Challenge</h1>
-            <p>This is the challenge section.</p>
+            <p>The challenge of this lab is to find the endpoint and run it successfully.</p>
         </div>
 
-        <h1>Problems</h1>
         <div id="problems-section">
-            <p>This is the problems section.</p>
+            <h1>Problems</h1>
+            <p>The image doesn't appear at first time due to incorrect code spelling.</p>
         </div>
 
-        <h1>Results</h1>
         <div id="results-section">
-            <p>This is the results section.</p>
-            
+            <h1>Results</h1>
+            <p>Here is the image of the comic</p>
             <div id="comic-container">
                 <h1 id="comic-title"></h1>
                 <img id="comic-img" src="" alt="XKCD Comic">
             </div>
         </div>
 
-    <script src="js/lab.js" defer></script>
+        <div id="output"></div>
+    </section>
 </body>
 </html>
