--- a/lab16/index.html
+++ b/lab16/index.html
@@ -25,6 +25,10 @@
                 <h1 id="comic-title"></h1>
                 <img id="comic-img" src="" alt="XKCD Comic">
             </div>
+            <div id="button-container">
+                <button id="prev-btn">Previous</button>
+                <button id="next-btn">Next</button>
+            </div>
         </div>
 
         <div id="output"></div>
