--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,53 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dreams Come True</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+  }
+  h1 {
+    color: #333;
+  }
+  label {
+    font-weight: bold;
+  }
+  button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+</style>
 </head>
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
+  <h1>Choose Your Dream Animal</h1>
+  <form id="dreamForm">
+    <label>
+      <input type="radio" name="animal" value="goldfish"> Goldfish
+    </label>
+    <label>
+      <input type="radio" name="animal" value="kitten"> Kitten
+    </label>
+    <label>
+      <input type="radio" name="animal" value="dove"> Dove
+    </label>
+    <br>
+    <button type="button" onclick="chooseAnimal()">Submit</button>
+  </form>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
+  <div id="result" style="display:none;">
+    <h2>Your Dream Came True!</h2>
+    <p id="dreamSkill"></p>
+    <button type="button" onclick="resetGame()">Play Again</button>
+  </div>
 
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
+  <script>
+    function chooseAnimal() {
+      var selectedAnimal = document.querySelector('input[name="animal"]:checked').value;
+      var resultDiv = document.getElementById('result');
+      var dreamSkill = document.getElementById('dreamSkill');
 
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
+      switch (selectedAnimal) {
+        case 'goldfish':
+          dreamSkill.textContent = 'You can now breathe underwater!';
+          break;
+        case 'kitten':
+          dreamSkill.textContent = 'You have the power to communicate with cats!';
+          break;
+        case 'dove':
+          dreamSkill.textContent = 'You can now fly gracefully like a dove!';
+          break;
+      }
+
+      resultDiv.style.display = 'block';
+    }
+
+    function resetGame() {
+      var form = document.getElementById('dreamForm');
+      form.reset();
+      var resultDiv = document.getElementById('result');
+      resultDiv.style.display = 'none';
+    }
+  </script>
 </body>
 </html>
-
