--- a/lab13/dsf.html
+++ b/lab13/dsf.html
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-image: url('mouse.gif'); /* Set the GIF as the background */
+            background-image: url('back.gif'); /* Set the GIF as the background */
             background-size: cover; /* Make sure the background covers the entire viewport */
             background-repeat: no-repeat; /* Prevent the background from repeating */
             background-attachment: fixed; /* Keep the background fixed while scrolling */
@@ -59,17 +59,15 @@
 
 <body>
     <div class="container">
-        <h1>Game Over</h1>
+        <h1>Night is coming</h1>
         <p>
-           Once you move, whales and sharks find out you and eat you...
-        </p>
-        
-        <p>
-            Welcome Back to the Real World!
+            After one-day work, you are sleepy and tired.
+            You lie on the bed and imaginew if you become a cat, a bird or any other anmials, you will not need to work...
+            Grudally, you fall asleep and all scences begin to change...
         </p>
     </div>
 
-  
+    <a class="continue-button" href="choose.html">Continue</a>
 </body>
 
 </html>
