--- a/html/coverPage.html
+++ b/html/coverPage.html
@@ -44,13 +44,31 @@
         }
     </style>
 </head>
-
 <body>
     <div class="container">
         <h1>DREAM COMES TRUE</h1>
         <div class="author">Author: Baoqi Yu</div>
         <a class="begin-button" href="introduction.html">Let's begin</a>
     </div>
-</body>
 
+    <audio src="haha.mp3" autoplay loop></audio>
+
+    <div class="container">
+        <!-- Your existing content -->
+    </div>
+
+    <div class="option-buttons">
+        <!-- Your option buttons -->
+    </div>
+
+    <script>
+        function goToPageA() {
+            window.location.href = 'pageA.html';
+        }
+
+        function goToPageB() {
+            window.location.href = 'pageB.html';
+        }
+    </script>
+</body>
 </html>
