--- a/html/fishEnd1.html
+++ b/html/fishEnd1.html
@@ -69,7 +69,7 @@
         </p>
     </div>
 
-    <a class="continue-button" href="3.html">Continue</a>
+    <a class="continue-button" href="choose.html">Wanna Play Again?</a>
 </body>
 
 </html>
