--- a/html/dove.html
+++ b/html/dove.html
@@ -124,7 +124,7 @@
 
 <script>
     function continueToNextPage() {
-        window.location.href = "1.html"; // Replace with the actual file name of the next page
+        window.location.href = "doveB.html"; // Replace with the actual file name of the next page
     }
 </script>
 </body>
