--- a/html/kittenE1.html
+++ b/html/kittenE1.html
@@ -68,7 +68,7 @@
            
         </p>
     </div>
-
+    <a class="continue-button" href="choose.html">Wanna Play Again?</a>
 </body>
 
 </html>
