--- a/lab1/index.html
+++ b/lab1/index.html
@@ -52,7 +52,7 @@
 
 <body>
     <div class="container">
-        <h1>DREAM COMES TRUE</h1>
+        <h1>DREAM COME TRUE</h1>
         <div class="author">Author: Baoqi Yu</div>
         <a class="begin-button" href="game/all/introduction.html" onclick="playAudio()">Let's begin</a>
     </div>
