--- a/lab1/index.html
+++ b/lab1/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <h1>DREAM COME TRUE</h1>
         <div class="author">Author: Baoqi Yu</div>
-        <a class="begin-button" href="game/all/introduction.html" onclick="playAudio()">Let's begin</a>
+        <a class="begin-button" href="all/introduction.html" onclick="playAudio()">Let's begin</a>
     </div>
 
     <audio id="myAudio" loop>
