--- a/lab1/index.html
+++ b/lab1/index.html
@@ -55,6 +55,7 @@
         <h1>DREAM COME TRUE</h1>
         <div class="author">Author: Baoqi Yu</div>
         <a class="begin-button" href="game/introduction.html" onclick="playAudio()">Let's begin</a>
+		<a href="game/Introduction.html">Go to Page 2</a>
     </div>
 
     <audio id="myAudio" loop>
